--- a/MyKindreds/app/src/main/res/layout/activity_main.xml
+++ b/MyKindreds/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android ="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="local.hal.st32.android.mykindreds.MainActivity">
+    android:orientation="vertical"
+    android:background="@color/textClear"
+    android:fitsSystemWindows = "true">
 
-    <TextView
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/textClear"
+        android:id="@+id/linearLayout">
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="270dp"
+            android:background="@color/textClear"
+            android:layout_margin="10dp"
+            android:textSize="25sp" />
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/mail_icon"
+                android:layout_marginLeft="130dp"
+                android:layout_marginTop="100dp"
+                />
+
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="307dp"
+                android:src="@drawable/akane_smail"
+                android:id="@+id/imageView"
+                android:layout_gravity="end"/>
+
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/textAreaBottom"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_weight="5"
+            android:background="@color/textDefault"
+            android:layout_gravity="bottom"
+            android:layout_margin="10dp"
+            android:padding="20dp"
+            android:text=""
+            android:textSize="20sp"
+            android:textColor="@color/textClear"/>
+
+
+
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabTextColor"
+        android:onClick="voiceOn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:layout_gravity="top|center_horizontal"
+        android:src="@android:drawable/ic_btn_speak_now"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        app:layout_anchor="@+id/linearLayout"
+        app:layout_anchorGravity="bottom|right" />
+
+</android.support.design.widget.CoordinatorLayout>
+
+
