--- a/MyKindreds/app/src/main/res/layout/activity_main.xml
+++ b/MyKindreds/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
 
 
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,14 +20,24 @@
         android:background="@color/textClear"
         android:id="@+id/linearLayout">
 
-
-        <TextView
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="270dp"
-            android:background="@color/textClear"
-            android:layout_margin="10dp"
-            android:textSize="25sp"
-            android:id="@+id/textView" />
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="270dp"
+                android:background="@color/textClear"
+                android:textSize="25sp"
+                android:id="@+id/textView" />
+
+            <ListView
+                android:layout_width="match_parent"
+                android:layout_height="270dp"
+                android:id="@+id/list_item"/>
+
+        </FrameLayout>
 
 
         <FrameLayout
@@ -35,25 +46,23 @@
             android:orientation="horizontal">
 
             <ImageView
-
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/mail_icon"
-                android:layout_marginLeft="130dp"
-                android:layout_marginTop="100dp"
-                />
-
-            <ImageView
                 android:layout_width="250dp"
                 android:layout_height="307dp"
                 android:src="@drawable/akane_smail"
-                android:id="@+id/imageView"
+                android:id="@+id/character"
                 android:layout_gravity="end"/>
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="130dp"
+                android:layout_marginTop="100dp"
+                android:id="@+id/imageView2" />
 
         </FrameLayout>
 
         <TextView
-            android:id="@+id/textAreaBottom"
+            android:id="@+id/textArea"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_weight="5"
@@ -64,7 +73,6 @@
             android:text=""
             android:textSize="20sp"
             android:textColor="@color/textClear"/>
-
 
 
     </LinearLayout>
