--- a/MyKindreds/app/src/main/res/layout/activity_main.xml
+++ b/MyKindreds/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,18 @@
         app:layout_anchor="@+id/linearLayout"
         app:layout_anchorGravity="bottom|right" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabTest"
+        android:onClick="testOn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:src="@android:drawable/ic_dialog_info"
+        android:layout_marginRight="70dp"
+        android:layout_marginBottom="5dp"
+        app:layout_anchor="@+id/linearLayout"
+        app:layout_anchorGravity="bottom|right" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,14 +49,14 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="270dp"
+                android:layout_height="180dp"
                 android:background="@color/textClear"
                 android:textSize="25sp"
                 android:id="@+id/textView" />
 
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="270dp"
+                android:layout_height="180dp"
                 android:id="@+id/list_item"/>
 
         </FrameLayout>
@@ -56,8 +68,8 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="250dp"
-                android:layout_height="307dp"
+                android:layout_width="150dp"
+                android:layout_height="170dp"
                 android:src="@drawable/akane_smail"
                 android:id="@+id/character"
                 android:layout_gravity="end"/>
@@ -65,11 +77,12 @@
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginLeft="130dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginLeft="100dp"
+                android:layout_marginTop="70dp"
                 android:id="@+id/imageView2" />
 
         </FrameLayout>
+
         <TextView
             android:id="@+id/textArea"
             android:layout_width="match_parent"
