--- a/MyKindreds/app/src/main/res/layout/activity_main.xml
+++ b/MyKindreds/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:id="@+id/list_item"/>
+                android:id="@+id/todoList"/>
 
         </FrameLayout>
 
