--- a/MyKindredsForTablet/app/src/main/res/layout/activity_main.xml
+++ b/MyKindredsForTablet/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/textClear">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="3"
+        android:layout_weight="2.5"
+        android:background="@drawable/simple_border"
+        android:baselineAligned="false">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/schedule_name"
+            android:textColor="@color/textClear"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:background="@color/titleBackground" />
+
+        <ListView
+            android:id="@+id/scheduleList"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="2.5"
         android:background="@drawable/simple_border"
         android:baselineAligned="false">
 
@@ -56,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="3"
+        android:layout_weight="2.5"
         android:background="@drawable/simple_border">
 
         <TextView
@@ -100,7 +126,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="3"
+        android:layout_weight="2.5"
         android:background="@drawable/simple_border">
 
         <TextView
